deploy-commandservice.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commandservice-deployment
  labels:
    app: commandservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
      - name: commandservice
        image: ms-tutorial/command:latest
        imagePullPolicy: Never 
---
apiVersion: v1
kind: Service
metadata:
  name: commandcip-srv
spec:
  type: ClusterIP 
  selector:
    app: commandservice
  ports:
    - name: commandservice
      protocol: TCP
      port: 80
      targetPort: 80
