deploy-platform-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: mssql 
  template:
    metadata:
      labels:
        app: mssql
    spec:
      volumes: 
        - name: mssqldb
          persistentVolumeClaim:
            claimName: mssql-claim
      containers:
         - name: mssql
           image: mcr.microsoft.com/mssql/server:2019-latest
           ports: 
             - containerPort: 1433
           volumeMounts:
             - mountPath: /var/opt/mssql/data
               name: mssqldb
---
apiVersion: v1
kind: Service
metadata:
  name: mssqlcip-srv 
spec:
  type: ClusterIP
  selector:
    app: mssql 
  ports:
    - name: mssql 
      protocol: TCP
      port: 1433 
      targetPort: 1433 
---
apiVersion: v1
kind: Service
metadata:
  name: mssqllb-srv 
spec:
  type: LoadBalancer 
  selector:
    app: mssql 
  ports:
    - protocol: TCP
      port: 1433 
      targetPort: 1433
---
