deploy-platformservice.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platformservice-deployment
  labels:
    app: platformservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
      - name: platformservice
        image: ms-tutorial/platform:latest
        imagePullPolicy: Never 
---
apiVersion: v1
kind: Service
metadata:
  name: platformnp-srv
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: platformcip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80
